tests/e2e/semantics/map_dot_access2.error
Error: syntax error in story at line 2, column 5

2|    b = a["b"].c
          ^^^^^^^^

E0131: `string` can't be dot-accessed with `c` of type `string`
