tests/e2e/semantics/map_dot_access2.story
a = {"a": "b"}
b = a["b"].c
